# OptimalModelTree

./: README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
OriginalGurobiModels/: OMTClassifier.py  OMTClassifierOblique.py  OMTRegressor.py  OMTRegressorOblique.py
omt/: BinaryTree.py  DatabaseParser.py  Estimator.py  ModelTreeClassifier.py  ModelTreeClassifierOblique.py  ModelTreeRegressor.py  ModelTreeRegressorOblique.py  ORToolsClassifier.py  TreeStructure.py  __init__.py
optimal_omt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: Estimator_test.py  OMTClassifierTest.py  OMTRegressorTest.py  testLatestRelease.py
tests/ClassificationProblems/: Diabetes.arff  R_data_frame.arff  adult.arff  australian.arff  autoUniv-au1-1000.arff  autoUnivMulti.arff  banknote.arff  blogger-simplified.arff  boxing.arff  breastcancer.arff  california.arff  colic.arff  corral.arff  delta_ailerons.arff  doa_bwin_balanced.arff  gametes_Epistasis.arff  glass.arff  haberman.arff  heart.arff  hypothyroid.arff  jEdit.arff  mammo.arff  mc1.arff
tests/RegressionProblems/: 3D_Estimation.arff  BNG(echoMonths).arff  Bank-Note.arff  Boston-house-price-data.arff  Brazilian_houses_reproduced.arff  Contaminant-detection-in-packaged-cocoa-hazelnut-spread-jars-using-Microwaves-Sensing-and-Machine-Learning-10.0GHz(Urbinati).arff  DEE.arff  ELE-1.arff  HappinessRank_2015.arff  Insurance.arff  KDD.arff  Long.arff  Pima-Indians-Diabetes.arff  QSAR_fish_toxycity.arff  RAM_price.arff  Shipping.arff  SquareF.arff  Waterstress.arff  analcatdata_supreme.arff  appendicitis_test.arff  (+28 more)
