[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimal-omt"
version = "0.1.1"
description = "Optimal Model Trees using OR-Tools"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "binarytree",
    "ortools",
    "setuptools<=80.9.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["omt"]